syntax = "proto3";
option go_package = "./pb";

package pb;

message HTTPFirewallRuleGroup {
	int64 id = 1;
	string name = 2;
	bool isOn = 3;
	string description = 4;
	string code = 5;
}